Fixed bug related to word wrap on screen borders.

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -4,7 +4,10 @@ html, body {
     font-family: "Lucida Grande", Verdana;
     font-size: 0.9em;
     text-align: center;
-    background-color:#F2F2F2;
+    background-color: #F2F2F2;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 input, select {
@@ -34,49 +37,6 @@ a {
     position:relative;
 }
 
-#left-container, 
-#right-container, 
-#center-container {
-    height:800px;
-    position:absolute;
-    top:0;
-}
-
-#left-container, #right-container {
-    width:50px;
-    color:#686c70;
-    text-align: left;
-    overflow: auto;
-    background-color:#fff;
-    background-repeat:no-repeat;
-    border-bottom:1px solid #ddd;
-}
-
-#left-container {
-    left:0;
-    background-image:url('col2.png');
-    background-position:center right;
-    border-left:1px solid #ddd;
-    
-}
-
-#right-container {
-    right:0;
-    background-image:url('col1.png');
-    background-position:center left;
-    border-right:1px solid #ddd;
-}
-
-#right-container h4{
-    text-indent:8px;
-}
-
-#center-container {
-    width:1200px;
-    left:50px;
-    color:#ccc;
-}
-
 .text {
     margin: 7px;
 }
@@ -97,6 +57,8 @@ a {
 
 
 #infovis {
+    top: -500px;
+    left: -500px;
     position:relative;
     margin:auto;
     overflow:hidden;
